// Vitest Snapshot v1

exports[`generateRouteManifest function > layout-routes 1`] = `
[
  {
    "componentName": "PagesBlogIndex",
    "file": "pages/blog/index.tsx",
    "id": "pages/blog/index",
    "index": true,
    "parentId": undefined,
    "path": "/blog",
  },
  {
    "componentName": "PagesBlog$id",
    "file": "pages/blog/$id.tsx",
    "id": "pages/blog/$id",
    "index": undefined,
    "parentId": undefined,
    "path": "/blog/:id",
  },
  {
    "componentName": "PagesAbout",
    "file": "pages/about.tsx",
    "id": "pages/about",
    "index": undefined,
    "parentId": undefined,
    "path": "/about",
  },
  {
    "componentName": "PagesIndex",
    "file": "pages/index.tsx",
    "id": "pages/index",
    "index": true,
    "parentId": undefined,
    "path": undefined,
  },
]
`;

exports[`generateRouteManifest function layout-routes 1`] = `
Array [
  Object {
    "componentName": "PagesBlogIndex",
    "file": "pages/blog/index.tsx",
    "id": "pages/blog/index",
    "index": true,
    "parentId": undefined,
    "path": "/blog",
  },
  Object {
    "componentName": "PagesBlog$id",
    "file": "pages/blog/$id.tsx",
    "id": "pages/blog/$id",
    "index": undefined,
    "parentId": undefined,
    "path": "/blog/:id",
  },
  Object {
    "componentName": "PagesAbout",
    "file": "pages/about.tsx",
    "id": "pages/about",
    "index": undefined,
    "parentId": undefined,
    "path": "/about",
  },
  Object {
    "componentName": "PagesIndex",
    "file": "pages/index.tsx",
    "id": "pages/index",
    "index": true,
    "parentId": undefined,
    "path": undefined,
  },
]
`;
